@@ -3,6 +3,7 @@ package ru.job4j.cache;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class DirFileCache extends AbstractCache<String, String> {
@@ -19,14 +20,13 @@ public class DirFileCache extends AbstractCache<String, String> {
 
     @Override
     protected String load(String cachingDir) {
-        StringBuilder sb = new StringBuilder();
+        String rsl = "";
         try {
-            Files.lines(Paths.get(cachingDir), StandardCharsets.UTF_8)
-                    .forEach(x -> sb.append(x + System.lineSeparator()));
+            rsl = Files.readString(Path.of(cachingDir));
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return sb.toString();
+        return rsl;
     }
 
 }
